Fixed canvas stretch issue

--- a/prototypes/Main View Prototype/drawingApp.css
+++ b/prototypes/Main View Prototype/drawingApp.css
@@ -45,8 +45,6 @@ body {
   min-width: 100px;
 }
 #main-canvas {
-  height: 100%;
-  width: 100%;
   border: 5px solid black;
   background-color: #F1FAFB;
 }
